# YouTubePlaylistDownloader

./: .gitignore  LICENSE  README.md  config.json  downloaded.txt  lib.py  main.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt  start_all.bat
.github/workflows/: readme-workflow.yml
