[project]
name = "youtubeplaylistdownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bgutil-ytdlp-pot-provider>=1.2.2",
    "curl-cffi>=0.7.0",
    "customtkinter>=5.2.2",
    "yt-dlp[default]>=2025.12.8",
]
[project.scripts]
ytpldl = "main:main"

[tool.uv.workspace]
members = [
    "bgutil-ytdlp-pot-provider/server",
]
